--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="NS Interior Design Consultant – Residential, Commercial, Hotels, Cafes, and more." />
-  <meta name="keywords" content="Interior Design Mumbai, Residential Interiors, Office Design, Cafe Design, Hotel Interior, Lobby Design, NS Interior Design" />
-  <meta name="author" content="NS Interior Design Consultant" />
-  <title>NS Interior Design Consultant | Gallery</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="NS Interior Design Consultant – Residential, Commercial, Hotels, Cafes, and more.">
+  <meta name="keywords" content="Interior Design, Residential Interiors, Office Design, Cafe Design, Hotel Interior, Lobby Design, NS Interior Design">
+  <meta name="author" content="NS Interior Design Consultant">
+  <title>NS Interior Design Consultant</title>
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -23,48 +25,62 @@
       display: block;
       margin: 0 auto 10px;
     }
-    h1 {
-      font-size: 24px;
-      margin: 10px 0 5px;
-    }
-    p.tagline {
-      font-size: 16px;
-      color: #ddd;
-    }
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 15px;
+    section {
       padding: 20px;
+      text-align: center;
     }
-    .gallery img {
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    h2 {
+      color: #111;
     }
     footer {
-      background-color: #222;
+      background: #111;
       color: #fff;
       text-align: center;
-      padding: 15px;
-      font-size: 14px;
+      padding: 10px;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
+
   <header>
-    <img src="logo-white-bg.png" alt="NS Interior Design Logo" />
-    <h1>NS INTERIOR DESIGN CONSULTANT</h1>
-    <p class="tagline">Transforming Spaces with Elegance</p>
-  </header>  <section class="gallery">
-    <img src="interior1.jpg" alt="Interior Design 1" />
-    <img src="interior2.jpg" alt="Interior Design 2" />
-    <img src="interior3.jpg" alt="Interior Design 3" />
-    <img src="interior4.jpg" alt="Interior Design 4" />
-    <img src="interior5.jpg" alt="Interior Design 5" />
-  </section>  <footer>
-    &copy; 2025 NS Interior Design Consultant | 📞 +91 93247 33033
+    <img src="logo-png.png" alt="NS Interior Design Logo">
+    <h1>NS Interior Design Consultant</h1>
+    <p>Residential | Commercial | Hotels | Cafes</p>
+  </header>
+
+  <section>
+    <h2>About Us</h2>
+    <p>We provide creative and modern interior design solutions for residential, commercial, hotels, and cafés.</p>
+  </section>
+
+  <section>
+    <h2>Our Services</h2>
+    <ul style="list-style: none; padding:0;">
+      <li>🏠 Residential Interiors</li>
+      <li>🏢 Office & Commercial Spaces</li>
+      <li>🏨 Hotels & Cafes</li>
+      <li>🏛️ Lobby & Public Areas</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Gallery</h2>
+    <img src="IMG_20250813_212542.jpg" alt="Interior Example" style="max-width:300px;">
+    <img src="images (77).jpeg" alt="Interior Example" style="max-width:300px;">
+  </section>
+
+  <section>
+    <h2>Contact Us</h2>
+    <p>Email: info@nsinteriordesign.com</p>
+    <p>Phone: +91-9876543210</p>
+  </section>
+
+  <footer>
+    <p>© 2025 NS Interior Design Consultant</p>
   </footer>
+
+  <!-- Chatbot -->
+  <script src="//code.tidio.co/YOURCODE.js" async></script>
 </body>
 </html>
