--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
   </footer>
 
   <!-- Chatbot -->
-  <script src="//code.tidio.co/YOURCODE.js" async></script>
+<script src="//code.tidio.co/8ttqmjxkwe2npwsdxmlzzww0wdpucbra.js" async></script>
+
 </body>
 </html>
