--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
   </section>
 
   <section>
-    <h2>Contact Us</h2>
-    <p>Email: info@nsinteriordesign.com</p>
-    <p>Phone: +91-9324733033</p>
+    <h2>Contact Us</h2>    
+    <p>Email: <a   href="mailto:info@nsinteriordesign.com">info@nsinteriordesign.com</a></p>
+    <p>Phone: <a href="tel:   +919324733033">+91-9324733033</a></p>
   </section>
 
   <footer>
