--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <section>
     <h2>Contact Us</h2>    
-    <p>Email: <a   href="mailto:info@nsinteriordesign.com">info@nsinteriordesign.com</a></p>
+    <p>Email: <a   href="mailto:ns.interiordesign.c@gmail.com">info@nsinteriordesign.com</a></p>
     <p>Phone: <a href="tel:   +919324733033">+91-9324733033</a></p>
   </section>
 
