--- a/index.html
+++ b/index.html
@@ -48,6 +48,41 @@
     <h1>NS Interior Design Consultant</h1>
     <p>Residential | Commercial | Hotels | Cafes</p>
   </header>
+<section id="residential">
+  <h2>Residential Interiors</h2>
+  <p>We design modern homes with premium materials like plywood, laminates, marble, and modular fittings. Price depends on space and style.</p>
+  <img src="res1.jpg" alt="Residential Example 1" style="max-width:300px;">
+  <img src="res2.jpg" alt="Residential Example 2" style="max-width:300px;">
+  <img src="res3.jpg" alt="Residential Example 3" style="max-width:300px;">
+</section>
+
+<section id="commercial">
+  <h2>Commercial Interiors</h2>
+  <p>Office & commercial space designs with modular furniture, partitions, lighting, and durable flooring for productivity and appeal.</p>
+  <img src="com1.jpg" alt="Commercial Example 1" style="max-width:300px;">
+  <img src="com2.jpg" alt="Commercial Example 2" style="max-width:300px;">
+  <img src="com3.jpg" alt="Commercial Example 3" style="max-width:300px;">
+  <img src="com4.jpg" alt="Commercial Example 4" style="max-width:300px;">
+</section>
+
+<section id="hotels">
+  <h2>Hotel Interiors</h2>
+  <p>Hotel spaces with luxury finishes, false ceilings, designer lighting, and acoustics to create comfort and elegance.</p>
+  <img src="hotel1.jpg" alt="Hotel Example 1" style="max-width:300px;">
+  <img src="hotel2.jpg" alt="Hotel Example 2" style="max-width:300px;">
+</section>
+
+<section id="cafes">
+  <h2>Café Interiors</h2>
+  <p>Cafés designed with creative themes, lighting, wooden finishes, and seating layouts for customer experience.</p>
+  <img src="cafe1.jpg" alt="Cafe Example 1" style="max-width:300px;">
+  <img src="cafe2.jpg" alt="Cafe Example 2" style="max-width:300px;">
+</section>
+
+<section>
+  <h2>About Us</h2>
+  <p>We provide creative and modern interior design solutions for residential, commercial, hotels, and cafés.</p>
+</section>
 
   <section>
     <h2>About Us</h2>
