--- a/index.html
+++ b/index.html
@@ -1,135 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="NS Interior Design Consultant – Residential, Commercial, Hotels, Cafes, and more.">
-  <meta name="keywords" content="Interior Design, Residential Interiors, Office Design, Cafe Design, Hotel Interior, Lobby Design, NS Interior Design">
-  <meta name="author" content="NS Interior Design Consultant">
-  <title>NS Interior Design Consultant</title>
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background-color: #f8f8f8;
-    }
-    header {
-  background: url('header-bg.jpg') no-repeat center center/cover;
-  color: #fff;
-  padding: 60px 20px;
-  text-align: center;
-  position: relative;
-}
-
-header::after {
-  content: "";
-  position: absolute;
-  top: 0; left: 0; right: 0; bottom: 0;
-  background: rgba(0,0,0,0.5); /* dark overlay for readability */
-}
-
-header h1, header p, header img {
-  position: relative; /* keeps text above overlay */
-  z-index: 1;
-}
-    header img {
-      max-width: 80px;
-      display: block;
-      margin: 0 auto 10px;
-    }
-    section {
-      padding: 20px;
-      text-align: center;
-    }
-    h2 {
-      color: #111;
-    }
-    footer {
-      background: #111;
-      color: #fff;
-      text-align: center;
-      padding: 10px;
-      margin-top: 20px;
-    }
-  </style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>NS Interior Design Consultant – Mumbai | Dombivli | Kalyan</title>
+<meta name="description" content="Residential, Commercial, Hotel and Café interiors in Mumbai, Dombivli, Kalyan and Thane.">
+<style>
+  body{font-family:Arial, sans-serif;margin:0;background:#f8f8f8;color:#222}
+  header,footer{background:#111;color:#fff;text-align:center;padding:18px}
+  main{padding:18px;max-width:1000px;margin:auto}
+  h1,h2{text-align:center}
+  .links a{display:inline-block;margin:6px 10px;padding:10px 14px;border-radius:8px;background:#111;color:#fff;text-decoration:none}
+  .card{background:#fff;border-radius:10px;padding:16px;margin:16px auto;max-width:860px}
+  a{color:#0b57d0}
+</style>
 </head>
 <body>
+<header>
+  <img src="logo-png.png" alt="NS Interior Design Logo" style="max-width:80px;display:block;margin:0 auto 10px">
+  <h1>NS Interior Design Consultant</h1>
+  <p>Mumbai – Dombivli | Kalyan | Thane</p>
+</header>
 
-  <header>
-    <img src="logo-png.png" alt="NS Interior Design Logo">
-    <h1>NS Interior Design Consultant</h1>
-    <p>Residential | Commercial | Hotels | Cafes</p>
-  </header>
-<section id="residential">
-  <h2>Residential Interiors</h2>
-  <p>We design modern homes with premium materials like plywood, laminates, marble, and modular fittings. Price depends on space and style.</p>
-  <img src="res1.jpg" alt="Residential Example 1" style="max-width:300px;">
-  <img src="res2.jpg" alt="Residential Example 2" style="max-width:300px;">
-  <img src="res3.jpg" alt="Residential Example 3" style="max-width:300px;">
-</section>
-
-<section id="commercial">
-  <h2>Commercial Interiors</h2>
-  <p>Office & commercial space designs with modular furniture, partitions, lighting, and durable flooring for productivity and appeal.</p>
-  <img src="com1.jpg" alt="Commercial Example 1" style="max-width:300px;">
-  <img src="com2.jpg" alt="Commercial Example 2" style="max-width:300px;">
-  <img src="com3.jpg" alt="Commercial Example 3" style="max-width:300px;">
-  <img src="com4.jpg" alt="Commercial Example 4" style="max-width:300px;">
-</section>
-
-<section id="hotels">
-  <h2>Hotel Interiors</h2>
-  <p>Hotel spaces with luxury finishes, false ceilings, designer lighting, and acoustics to create comfort and elegance.</p>
-  <img src="hotel1.jpg" alt="Hotel Example 1" style="max-width:300px;">
-  <img src="hotel2.jpg" alt="Hotel Example 2" style="max-width:300px;">
-</section>
-
-<section id="cafes">
-  <h2>Café Interiors</h2>
-  <p>Cafés designed with creative themes, lighting, wooden finishes, and seating layouts for customer experience.</p>
-  <img src="cafe1.jpg" alt="Cafe Example 1" style="max-width:300px;">
-  <img src="cafe2.jpg" alt="Cafe Example 2" style="max-width:300px;">
-</section>
-
-<section>
-  <h2>About Us</h2>
-  <p>We provide creative and modern interior design solutions for residential, commercial, hotels, and cafés.</p>
-</section>
-
-  <section>
-    <h2>About Us</h2>
-    <p>We provide creative and modern interior design solutions for residential, commercial, hotels, and cafés.</p>
+<main>
+  <section class="card">
+    <h2>Explore Our Work</h2>
+    <p class="links">
+      <a href="residential.html">Residential</a>
+      <a href="commercial.html">Commercial</a>
+      <a href="hotels.html">Hotels</a>
+      <a href="cafes.html">Cafés</a>
+    </p>
   </section>
 
-  <section>
-    <h2>Our Services</h2>
-    <ul style="list-style: none; padding:0;">
-      <li>🏠 Residential Interiors</li>
-      <li>🏢 Office & Commercial Spaces</li>
-      <li>🏨 Hotels & Cafes</li>
-      <li>🏛️ Lobby & Public Areas</li>
-    </ul>
+  <section class="card">
+    <h2>Quick Pricing</h2>
+    <p><strong>1BHK from ₹9 L</strong> • <strong>2BHK from ₹10 L</strong> • <strong>3BHK from ₹13 L</strong> (final price depends on size & finishes).<br>
+    Design & drafting from <strong>₹1,000</strong>.</p>
   </section>
 
-  <section>
-    <h2>Gallery</h2>
-    <img src="IMG_20250813_212542.jpg" alt="Interior Example" style="max-width:300px;">
-    <img src="images (77).jpeg" alt="Interior Example" style="max-width:300px;">
+  <section class="card">
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:info@nsinteriordesign.com">info@nsinteriordesign.com</a></p>
+    <p>Phone: <a href="tel:+919324733033">+91 93247 33033</a></p>
+    <p>WhatsApp: <a href="https://wa.me/919324733033" target="_blank">Chat on WhatsApp</a></p>
   </section>
+</main>
 
-  <section>
-    <h2>Contact Us</h2>    
-    <p>Email: <a   href="mailto:ns.interiordesign.c@gmail.com">info@nsinteriordesign.com</a></p>
-    <p>Phone: <a href="tel:   +919324733033">+91-9324733033</a></p>
-  </section>
+<footer><p>© 2025 NS Interior Design Consultant</p></footer>
 
-  <footer>
-    <p>© 2025 NS Interior Design Consultant</p>
-  </footer>
-
-  <!-- Chatbot -->
+<!-- Tidio Chat -->
 <script src="//code.tidio.co/8ttqmjxkwe2npwsdxmlzzww0wdpucbra.js" async></script>
-
-</body>
-</html>
+</body></html>
