--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <section class="card">
     <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:info@nsinteriordesign.com">info@nsinteriordesign.com</a></p>
+    <p>Email: <a href="mailto:ns.interiordesign.c@gmail.com">info@nsinteriordesign.com</a></p>
     <p>Phone: <a href="tel:+919324733033">+91 93247 33033</a></p>
     <p>WhatsApp: <a href="https://wa.me/919324733033" target="_blank">Chat on WhatsApp</a></p>
   </section>
