--- a/commercial.html
+++ b/commercial.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Residential Interiors | NS Interior Design</title>
-<meta name="description" content="Residential interiors in Dombivli, Kalyan, Thane – kitchens, bedrooms, wardrobes, living rooms.">
+<title>Commercial Interiors | NS Interior Design</title>
+<meta name="description" content="Office and commercial interiors – receptions, cabins, partitions, storage, acoustics and lighting.">
 <style>
  body{font-family:Arial,sans-serif;margin:0;background:#f8f8f8}
  header,footer{background:#111;color:#fff;text-align:center;padding:18px}
@@ -15,24 +15,24 @@
 </style></head><body>
 <header>
   <nav><a href="index.html">Home</a> | <a href="residential.html">Residential</a> | <a href="commercial.html">Commercial</a> | <a href="hotels.html">Hotels</a> | <a href="cafes.html">Cafés</a></nav>
-  <h1>Residential Interiors</h1>
+  <h1>Commercial Interiors</h1>
 </header>
 
 <main>
   <div class="card">
-    <p>Modern homes with plywood/HDHMR carcasses, laminate/PU shutters, granite/quartz counters, soft-close hardware, warm 3000K lighting.</p>
-    <p><strong>1BHK from ₹9 L</strong> • <strong>2BHK from ₹10 L</strong> • <strong>3BHK from ₹13 L</strong>. Design & drafting from <strong>₹1,000</strong>.</p>
+    <p>Receptions, cabins, workstations, storage, acoustics, partitions (glass/gypsum), vinyl carpets/tiles, neutral palettes with accent lighting.</p>
   </div>
 
   <h2>Gallery</h2>
   <div class="grid">
-    <img src="res1.jpg" alt="Modular kitchen with marble backsplash">
-    <img src="res2.jpg" alt="TV wall with warm lighting">
-    <img src="res3.jpg" alt="Bedroom with wardrobe">
+    <img src="com1.jpg" alt="Modern reception desk with plants">
+    <img src="com2.jpg" alt="Compact cabin with wood finish">
+    <img src="com3.jpg" alt="Executive desk with pastel wall">
+    <img src="com4.jpg" alt="Lobby reception with curved counter">
   </div>
 
   <div class="card" style="text-align:center">
-    <a class="btn" href="mailto:info@nsinteriordesign.com?subject=Residential%20Inquiry">Email Us</a>
+    <a class="btn" href="mailto:info@nsinteriordesign.com?subject=Commercial%20Inquiry">Email Us</a>
     &nbsp;
     <a class="btn" href="https://wa.me/919324733033" target="_blank">WhatsApp</a>
   </div>
