--- a/cafe.html
+++ b/cafe.html
@@ -1,1 +1,46 @@
-in built
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Café Interiors – NS Interior Design</title>
+  <meta name="description" content="Café and restaurant interiors: creative themes, lighting, wooden finishes & seating layouts in Dombivli & Kalyan.">
+  <style>
+    body{font-family:Arial,sans-serif;margin:0;background:#f8f8f8}
+    header,footer{background:#111;color:#fff;text-align:center;padding:16px}
+    main{max-width:900px;margin:0 auto;padding:20px}
+    h1{color:#222;text-align:center}
+    .grid{display:grid;grid-template-columns:1fr;gap:16px}
+    .grid img{width:100%;border-radius:8px}
+    @media(min-width:640px){.grid{grid-template-columns:1fr 1fr}}
+    a.btn{display:inline-block;margin-top:16px;padding:10px 14px;background:#111;color:#fff;text-decoration:none;border-radius:6px}
+    p{line-height:1.6}
+  </style>
+</head>
+<body>
+  <header>
+    <a href="index.html" style="color:#fff;text-decoration:none">← Back to Home</a>
+  </header>
+
+  <main>
+    <h1>Café Interiors</h1>
+    <p>Cafés designed with creative themes, warm lighting, wooden finishes and seating layouts for great customer experience.</p>
+
+    <div class="grid">
+      <img src="cafe1.jpg" alt="Cafe interior example 1">
+      <img src="cafe2.jpg" alt="Cafe interior example 2">
+      <img src="cafe3.jpg" alt="Cafe interior example 3">
+      <img src="cafe4.jpg" alt="Cafe interior example 4">
+    </div>
+
+    <p><strong>Design & drafting:</strong> from ₹1,000.  
+       For full fit-outs, pricing depends on area and materials.</p>
+
+    <a class="btn" href="mailto:info@nsinteriordesign.com">Get a quote</a>
+    <a class="btn" href="tel:+919324733033">Call: +91-9324733033</a>
+  </main>
+
+  <footer>© 2025 NS Interior Design Consultant</footer>
+  <script src="//code.tidio.co/8ttqmjxkwe2npwsdxmlzzww0wdpubcbra.js" async></script>
+</body>
+</html>
