--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <p class="links">
       <a href="residential.html">Residential</a>
       <a href="commercial.html">Commercial</a>
-      <a href="hotels.html">Hotels</a>
-      <a href="cafes.html">Cafés</a>
+      <a href="hotel.html">Hotels</a>
+      <a href="cafe.html">Cafés</a>
     </p>
   </section>
 
