--- a/index.html
+++ b/index.html
@@ -1,53 +1,91 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>NS Interior Design Consultant – Mumbai | Dombivli | Kalyan</title>
-<meta name="description" content="Residential, Commercial, Hotel and Café interiors in Mumbai, Dombivli, Kalyan and Thane.">
-<style>
-  body{font-family:Arial, sans-serif;margin:0;background:#f8f8f8;color:#222}
-  header,footer{background:#111;color:#fff;text-align:center;padding:18px}
-  main{padding:18px;max-width:1000px;margin:auto}
-  h1,h2{text-align:center}
-  .links a{display:inline-block;margin:6px 10px;padding:10px 14px;border-radius:8px;background:#111;color:#fff;text-decoration:none}
-  .card{background:#fff;border-radius:10px;padding:16px;margin:16px auto;max-width:860px}
-  a{color:#0b57d0}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NS Interior Design Consultant</title>
+  <meta name="description" content="NS Interior Design Consultant – Residential, Commercial, Hotels, Cafés. Interior design solutions in Mumbai, Dombivli, Kalyan.">
+  <style>
+    body {font-family: Arial, sans-serif; margin:0; background:#f8f8f8;}
+    header, footer {background:#111; color:#fff; text-align:center; padding:18px;}
+    nav a {color:#fff; text-decoration:none; margin:0 8px;}
+    section {padding:40px 20px; max-width:1000px; margin:auto; text-align:center;}
+    h2 {color:#111; margin-bottom:20px;}
+    .gallery img {max-width:300px; margin:10px; border-radius:8px;}
+  </style>
 </head>
 <body>
+
 <header>
-  <img src="logo-png.png" alt="NS Interior Design Logo" style="max-width:80px;display:block;margin:0 auto 10px">
+  <img src="logo-png.png" alt="NS Interior Design Logo" style="max-width:80px;">
   <h1>NS Interior Design Consultant</h1>
-  <p>Mumbai – Dombivli | Kalyan | Thane</p>
+  <p>
+    <nav>
+      <a href="#residential">Residential</a> |
+      <a href="#commercial">Commercial</a> |
+      <a href="#hotels">Hotels</a> |
+      <a href="#cafes">Cafés</a>
+    </nav>
+  </p>
 </header>
 
-<main>
-  <section class="card">
-    <h2>Explore Our Work</h2>
-    <p class="links">
-      <a href="residential.html">Residential</a>
-      <a href="commercial.html">Commercial</a>
-      <a href="hotels.html">Hotels</a>
-      <a href="cafes.html">Cafés</a>
-    </p>
-  </section>
+<!-- Residential Section -->
+<section id="residential">
+  <h2>Residential Interiors</h2>
+  <p>We design modern homes with premium materials like plywood, laminates, marble, and modular fittings. Price depends on space and style.</p>
+  <div class="gallery">
+    <img src="res1.jpg" alt="Residential Example 1">
+    <img src="res2.jpg" alt="Residential Example 2">
+    <img src="res3.jpg" alt="Residential Example 3">
+  </div>
+</section>
 
-  <section class="card">
-    <h2>Quick Pricing</h2>
-    <p><strong>1BHK from ₹9 L</strong> • <strong>2BHK from ₹10 L</strong> • <strong>3BHK from ₹13 L</strong> (final price depends on size & finishes).<br>
-    Design & drafting from <strong>₹1,000</strong>.</p>
-  </section>
+<!-- Commercial Section -->
+<section id="commercial">
+  <h2>Commercial Interiors</h2>
+  <p>Office & commercial spaces designed with modular furniture, partitions, lighting, and durable flooring for productivity and appeal.</p>
+  <div class="gallery">
+    <img src="com1.jpg" alt="Commercial Example 1">
+    <img src="com2.jpg" alt="Commercial Example 2">
+    <img src="com3.jpg" alt="Commercial Example 3">
+    <img src="com4.jpg" alt="Commercial Example 4">
+  </div>
+</section>
 
-  <section class="card">
-    <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:ns.interiordesign.c@gmail.com">info@nsinteriordesign.com</a></p>
-    <p>Phone: <a href="tel:+919324733033">+91 93247 33033</a></p>
-    <p>WhatsApp: <a href="https://wa.me/919324733033" target="_blank">Chat on WhatsApp</a></p>
-  </section>
-</main>
+<!-- Hotel Section -->
+<section id="hotels">
+  <h2>Hotel Interiors</h2>
+  <p>Luxury hotel spaces with designer lighting, acoustics, and high-end finishes to create comfort and elegance.</p>
+  <div class="gallery">
+    <img src="hotel1.jpg" alt="Hotel Example 1">
+    <img src="hotel2.jpg" alt="Hotel Example 2">
+  </div>
+</section>
 
-<footer><p>© 2025 NS Interior Design Consultant</p></footer>
+<!-- Cafe Section -->
+<section id="cafes">
+  <h2>Café Interiors</h2>
+  <p>Cafés designed with creative themes, wooden finishes, and seating layouts to enhance customer experience.</p>
+  <div class="gallery">
+    <img src="cafe1.jpg" alt="Cafe Example 1">
+    <img src="cafe2.jpg" alt="Cafe Example 2">
+    <img src="cafe3.jpg" alt="Cafe Example 3">
+    <img src="cafe4.jpg" alt="Cafe Example 4">
+  </div>
+</section>
 
-<!-- Tidio Chat -->
-<script src="//code.tidio.co/8ttqmjxkwe2npwsdxmlzzww0wdpucbra.js" async></script>
-</body></html>
+<!-- Contact Section -->
+<section id="contact">
+  <h2>Contact Us</h2>
+  <p>Email: <a href="mailto:info@nsinteriordesign.com">info@nsinteriordesign.com</a></p>
+  <p>Phone: <a href="tel:+919324733033">+91 93247 33033</a></p>
+</section>
+
+<footer>
+  <p>© 2025 NS Interior Design Consultant</p>
+</footer>
+
+<!-- Chatbot Script -->
+<script src="//code.tidio.co/8ttqmjxkwe2npwsdxmlzzww0wdpubcra.js" async></script>
+</body>
+</html>
