--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     <nav>
       <a href="residential.html">Residential</a>
       <a href="commercial.html">Commercial</a>
-      <a href="hotels.html">Hotels</a>
-      <a href="cafes.html">Cafés</a>
+      <a href="hotel.html">Hotels</a>
+      <a href="cafe.html">Cafés</a>
     </nav>
   </header>
 
@@ -147,8 +147,8 @@
     <div class="links">
       <a href="residential.html">Residential</a> |
       <a href="commercial.html">Commercial</a> |
-      <a href="hotels.html">Hotels</a> |
-      <a href="cafes.html">Cafés</a>
+      <a href="hotels.html">Hotel</a> |
+      <a href="cafes.html">Cafe</a>
     </div>
     <p>© 2025 NS Interior Design Consultant</p>
   </footer>
