--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>NS Interior Design Consultant</title>
 
   <!-- SEO -->
-  <meta name="description" content="NS Interior Design Consultant — Residential, Commercial, Hotels, and Cafés. Interior design services in Mumbai, Dombivli, and Kalyan." />
+  <meta name="description" content="NS Interior Design Consultant — Residential, Commercial, Hotel, and Café interiors. Interior design services in Mumbai, Dombivli, and Kalyan." />
   <meta name="keywords" content="Interior Designer Mumbai, Dombivli, Kalyan, Residential Interiors, Commercial Interiors, Hotel Interiors, Cafe Interiors" />
   <meta name="author" content="NS Interior Design Consultant" />
 
@@ -85,8 +85,8 @@
     <nav>
       <a href="residential.html">Residential</a>
       <a href="commercial.html">Commercial</a>
-      <a href="hotel.html">Hotels</a>
-      <a href="cafe.html">Cafés</a>
+      <a href="hotel.html">Hotel</a>
+      <a href="cafe.html">Café</a>
     </nav>
   </header>
 
@@ -114,12 +114,12 @@
         <div class="card">
           <h3>Hotel Interiors</h3>
           <p>Guest rooms, lobbies & dining with luxury finishes.</p>
-          <a class="cta" href="hotels.html">View Hotels</a>
+          <a class="cta" href="hotel.html">View Hotel</a>
         </div>
         <div class="card">
-          <h3>Cafés</h3>
+          <h3>Café Interiors</h3>
           <p>Theme-based concepts with durable, cozy materials.</p>
-          <a class="cta" href="cafes.html">View Cafés</a>
+          <a class="cta" href="cafe.html">View Café</a>
         </div>
       </div>
     </section>
@@ -136,9 +136,7 @@
       <h2>Contact Us</h2>
       <p>Email: <a href="mailto:info@nsinteriordesign.com">info@nsinteriordesign.com</a></p>
       <p>Phone: <a href="tel:+919324733033">+91-9324733033</a></p>
-      <!-- Add more numbers if you like:
-      <p>Alt: <a href="tel:+919619683005">+91-9619683005</a> | <a href="tel:+919539552984">+91-95395 52984</a> | <a href="tel:+919994122984">+91-9994122984</a></p>
-      -->
+      <!-- More numbers optional -->
       <p>WhatsApp: <a href="https://wa.me/919324733033" target="_blank" rel="noopener">Chat on WhatsApp</a></p>
     </section>
   </main>
@@ -147,8 +145,8 @@
     <div class="links">
       <a href="residential.html">Residential</a> |
       <a href="commercial.html">Commercial</a> |
-      <a href="hotels.html">Hotel</a> |
-      <a href="cafes.html">Cafe</a>
+      <a href="hotel.html">Hotel</a> |
+      <a href="cafe.html">Café</a>
     </div>
     <p>© 2025 NS Interior Design Consultant</p>
   </footer>
